--- a/solution/Makefile
+++ b/solution/Makefile
@@ -158,6 +158,15 @@ test.local: ## run cypress tests locally without docker
 python.unittest:
 	docker-compose exec regulations python manage.py test
 
+python.shell:
+	docker-compose exec regulations python manage.py shell
+
+python.makemigrations:
+	docker-compose exec regulations python manage.py makemigrations
+
+python.migrate:
+	docker-compose exec regulations python manage.py migrate
+	
 local.seed:
 	docker-compose exec regulations python manage.py loaddata resources.category.json
 	docker-compose exec regulations python manage.py loaddata resources.subcategory.json
