--- a/.github/workflows/load-regulations.yml
+++ b/.github/workflows/load-regulations.yml
@@ -26,7 +26,7 @@ jobs:
           submodules: false
       - uses: actions/setup-node@v3
         with:
-          node-version: '15.11.0'
+          node-version: 18.14
       - name: Configure AWS credentials for GitHub Actions
         uses: aws-actions/configure-aws-credentials@v2
         with:
