Add backup retention minimum of 7 days

--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -233,7 +233,8 @@ resources:
         Engine: aurora-postgresql
         EngineVersion: "15.2"
         DatabaseName: 'eregs'
-        BackupRetentionPeriod: 3
+        BackupRetentionPeriod: 7
+        BackupRetentionMinimum: 7
         DBClusterParameterGroupName:
           Ref: AuroraRDSClusterParameter15
         VpcSecurityGroupIds:
