--- a/.github/workflows/remove-experimental.yml
+++ b/.github/workflows/remove-experimental.yml
@@ -49,6 +49,8 @@ jobs:
           npm install
           aws cloudformation wait stack-create-complete \
             --stack-name cmcs-eregs-parser-dev${PR} 
+          aws cloudformation wait stack-create-complete \
+            --stack-name cmcs-eregs-fr-parser-dev${PR} 
           serverless remove --stage dev${PR} --config ./serverless-ecfr.yml
           serverless remove --stage dev${PR} --config ./serverless-fr.yml
           popd
@@ -66,6 +68,8 @@ jobs:
           npm install serverless -g
           npm install
           serverless invoke --config ./serverless-experimental.yml --function drop_database --stage dev${PR}
+          aws cloudformation wait stack-create-complete \
+            --stack-name cmcs-eregs-site-dev${PR} 
           serverless remove --config ./serverless-experimental.yml --stage dev${PR}
           popd
       # Remove the static assets
@@ -76,5 +80,7 @@ jobs:
           pushd solution/static-assets
           npm install serverless -g
           npm install
+          aws cloudformation wait stack-create-complete \
+            --stack-name cmcs-eregs-static-assets-${PR} 
           serverless remove --stage dev${PR}
           popd
