update the yml files

--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -166,6 +166,7 @@ resources:
             ViewerProtocolPolicy: redirect-to-https
           ViewerCertificate:
             CloudFrontDefaultCertificate: true
+          DefaultRootObject: index.html
 
   Outputs:
     CloudFrontDistributionId:
