--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ solution/static-assets/regulations/*
 solution/ui/regulations/dist
 solution/Dockerfile
 solution/ui/regulations/coverage/
+default.env.template
