--- a/solution/static-assets/package.json
+++ b/solution/static-assets/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "regulations-core-serverless",
-  "version": "0.0.0",
-  "description": "Serverless config for eRegs core",
-  "private": true,
-  "dependencies": {
-    "serverless": "^3.38.0",
-    "serverless-cloudfront-invalidate": "^1.12.2",
-    "serverless-python-requirements": "^5.4.0",
-    "serverless-s3-sync": "^1.17.3"
-  }
+    "name": "regulations-core-serverless",
+    "version": "0.0.0",
+    "description": "Serverless config for eRegs core",
+    "private": true,
+    "dependencies": {
+        "serverless-cloudfront-invalidate": "^1.12.2",
+        "serverless-python-requirements": "^5.4.0",
+        "serverless-s3-sync": "^1.17.3"
+    },
+    "overrides": {
+        "serverless": "^3.38.0"
+    }
 }
