--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -7,9 +7,7 @@
     "test-vue-coverage": "vitest --environment jsdom run --coverage",
     "css": "npx sass -I node_modules css/scss/main.scss ../../static-assets/regulations/css/main.css",
     "css-deploy": "npx sass -I node_modules css/scss/main-deploy.scss ../../static-assets/regulations/css/main.css",
-    "watch-css": "npx sass --watch -I node_modules css/scss/main.scss ../../static-assets/regulations/css/main.css",
-    "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
-    "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider build-storybook"
+    "watch-css": "npx sass --watch -I node_modules css/scss/main.scss ../../static-assets/regulations/css/main.css"
   },
   "license": "CC",
   "private": true,
@@ -33,13 +31,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/vue": "^6.5.12",
     "@testing-library/vue": "^8.0.3",
     "@vitest/coverage-c8": "^0.31.1",
     "@vue/component-compiler": "^4.2.4",
@@ -48,16 +39,13 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-storybook": "^0.6.4",
     "eslint-plugin-vue": "^9.9.0",
     "eslint-plugin-vuetify": "^2.1.0",
     "happy-dom": "^9.18.3",
     "jsdom": "^22.0.0",
     "msw": "^1.2.1",
-    "msw-storybook-addon": "^1.6.3",
     "prettier": "2.2.1",
     "sass-loader": "^13.0.2",
-    "storybook-addon-sass-postcss": "^0.1.3",
     "vite": "^5.2.12",
     "vitest": "^0.31.0",
     "vue-eslint-parser": "^9.4.2",
