--- a/solution/static-assets/package.json
+++ b/solution/static-assets/package.json
@@ -6,5 +6,11 @@
     "dependencies": {
         "serverless-python-requirements": "^5.4.0",
         "serverless-s3-sync": "^1.17.3"
+    },
+    "devDependencies": {
+        "aws-sdk": "^2.224.1",
+        "chalk": "^2.3.1",
+        "proxy-agent": "^5.0.0",
+        "randomstring": "^1.1.5"
     }
 }
