--- a/solution/static-assets/package.json
+++ b/solution/static-assets/package.json
@@ -4,8 +4,11 @@
     "description": "Serverless config for eRegs core",
     "private": true,
     "dependencies": {
-        "serverless-cloudfront-invalidate": "^1.12.2",
         "serverless-python-requirements": "^5.4.0",
-        "serverless-s3-sync": "^1.17.3"
+        "serverless-s3-sync": "^1.17.3",
+        "aws-sdk": "^2.224.1",
+        "chalk": "^2.3.1",
+        "proxy-agent": "^5.0.0",
+        "randomstring": "^1.1.5"
     }
 }
