--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@testing-library/vue": "^8.0.3",
-    "@vitest/coverage-c8": "^0.31.1",
+    "@vitest/coverage-v8": "^1.6.0",
     "@vue/component-compiler": "^4.2.4",
     "babel-loader": "^8.2.2",
     "eslint": "^8.57.0",
@@ -47,7 +47,7 @@
     "prettier": "2.2.1",
     "sass-loader": "^13.0.2",
     "vite": "^5.3.1",
-    "vitest": "^0.31.0",
+    "vitest": "^1.6.0",
     "vue-eslint-parser": "^9.4.2",
     "webpack": "^5.76.0",
     "whatwg-fetch": "^3.6.2"
