--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "test-vue": "vitest --environment jsdom",
+    "test-vue-ui": "vitest --environment jsdom --coverage.enabled=true --ui",
     "test-vue-coverage": "vitest --environment jsdom run --coverage",
     "css": "npx sass -I node_modules css/scss/main.scss ../../static-assets/regulations/css/main.css",
     "css-deploy": "npx sass -I node_modules css/scss/main-deploy.scss ../../static-assets/regulations/css/main.css",
@@ -33,6 +34,7 @@
     "@babel/core": "^7.13.16",
     "@testing-library/vue": "^8.1.0",
     "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
     "@vue/component-compiler": "^4.2.4",
     "babel-loader": "^8.2.2",
     "eslint": "^8.57.0",
