--- a/.github/workflows/ruff-action.yml
+++ b/.github/workflows/ruff-action.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: chartboost/ruff-action@v1
         with:
           src: "./solution"
-          args: --preview
+          args: "check --preview"
