--- a/.github/workflows/ruff-action.yml
+++ b/.github/workflows/ruff-action.yml
@@ -7,5 +7,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
         with:
-          src: "check ./solution"
-          args: --preview
+          src: "./solution"
+          args: "check --preview"
