--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,6 +91,7 @@ jobs:
           pushd solution/backend
           npm install serverless@">=3.38.0 <4" -g
           npm install
+          serverless deploy --config ./serverless-maintenance.yml --stage ${{ matrix.environment }} | tee output.log
           serverless deploy --config ./serverless-redirect.yml --stage ${{ matrix.environment }} | tee output.log
           serverless deploy --stage ${{ matrix.environment }} | tee output.log
           serverless invoke --function reg_core_migrate --stage ${{ matrix.environment }}
